fix: adjust path on swagger
