# docs/swagger.json
@@ -13,27 +13,7 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/health": {
-            "get": {
-                "description": "Verifica se a API está funcionando corretamente",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Health"
-                ],
-                "summary": "Health check",
-                "responses": {
-                    "200": {
-                        "description": "API está saudável",
-                        "schema": {
-                            "$ref": "#/definitions/models.HealthResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/validate-password": {
+        "/api/v1/validate-password": {
             "post": {
                 "description": "Valida se uma senha atende a todos os critérios de segurança definidos",
                 "consumes": [
@@ -74,6 +54,26 @@
                         "description": "Método não permitido",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/health": {
+            "get": {
+                "description": "Verifica se a API está funcionando corretamente",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Health"
+                ],
+                "summary": "Health check",
+                "responses": {
+                    "200": {
+                        "description": "API está saudável",
+                        "schema": {
+                            "$ref": "#/definitions/models.HealthResponse"
                         }
                     }
                 }
